required/custom.css
/* ... */
.cases_lift:before{
	content: '';
	background: url(../images/svgs/change-position.svg) no-repeat;
	zoom: 55%;
	width: 80px !important;
	height: 80px !important;
	display: inline-block;
}

.cases_accuracy:before{
	content: '';
	background: url(../images/svgs/target.svg) no-repeat;
	zoom: 55%;
	width: 80px !important;
	height: 80px !important;
	display: inline-block;
}

.cases_profit:before{
	content: '';
	background: url(../images/svgs/bar-graph-with-dollar-sign.svg) no-repeat;
	/* zoom: 55%; */
	width: 80px !important;
	height: 80px !important;
	display: inline-block;
}

.cases-header{
	font-size: 4.4em;
	color: #444444;
	font-family: sans-serif;
	padding-top: 80px;
	width: 650px"
}

.cases-tab-top{
	display: inherit;
	text-align: -webkit-center;
}

.cases-tab-body{
	padding-top:120px;
}

.product-propensity-cases{
	content: '';
	background: url(../images/icons/services/icons8-rent-50.svg) no-repeat;
	position: relative;
	z-index: 100000;
	top: 22px;
	zoom: 50%;
	background-size: 80px !important;
	width: 80px !important;
	height: 80px !important;
	visibility: visible;
	display: inline-block;
}

.circle {
  background: #fff;
  border-radius: 50%;
  height: 125px;
	width: 125px;
	/* border: 2px solid #333; */
	margin-bottom:50px;
}

.circle-content {
  color: #333;
  /* float: left; */
  line-height: 1;
  margin-top: -0.5em;
  /* padding-top: 50%; */
  text-align: center;
	width: 100%;
	line-height: 125px;
}

.cases-divider {
  width: 2px;
  margin: 6px 0;
  background: blue;
}


/* Connect Page CSS */

.connect-heading{
	color:white !important; 
	font-weight: 300 !important; 
	font-size: 50px !important; 
	text-align: left; 
	position: absolute; top:45%;
}

.connect-h4{
	margin-left: 3%; 
	font-weight: 400; 
	font-size: 2.0em;
	margin-top: 8px;
}

.connect-grid {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
	justify-content: center;
	justify-items: center;
	grid-row-gap: 2%;
	margin-bottom: 20px
}

.connect-card {
	height: 350px;
	width: 280px;
	/* border: 1px solid #ddd; */
	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16);
	border-radius: 5px;
	transition: box-shadow .25s; 
	background-color: #fff;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
}



.connect-card img {
	width: 100%;
	height: 45%;
	overflow: hidden;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
}

.connect-card div {
	width: 100%;
	padding: 20px;
}

.connect-card:hover {
	box-shadow: 0 2px 5px 3px rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
	border: none;
	cursor: pointer;
}

.connect-card:hover img{
	width: 100% !important;
	margin: 0 !important
}

/* Home Page Custom CSS */

.rotating-words{
	font-weight:500; 
	font-size: 2.2em !important;  
	text-transform: none !important;
	color: #777;
	font-style: italic;
}

.feature-box h2{
	font-weight: 400 !important; 
	font-size: 1.5em; 
	margin-top: 65px;
}

.home-cases-headings{
	font-size: 1.8em !important;
	/* width: max-content; */
	/* margin-left: 2% !important; */
	text-align: center;
}

.home-cases-p{
  font-size: 1.1em;
	/* margin-left: 2% !important; */
	margin-top:-10px !important;
}

.home-cases-icon{
	top:-17px;
}

.home-h2{
	font-size: 2em !important;
}

.home-h2-subtitle{
	font-size: 1.4em !important;
}

.icon-right{
	position: relative !important;
	float: right;
	margin-left: 5%;
	margin-bottom: 40px;
}

.lefty{
	margin-left: 3% !important;
	margin-right: 40% !important;
}


.righty{
	margin-left: 40% !important;
}

.mbhuge{
	margin-bottom: 65px;
}

.mtshort{
	margin-top: 10px;
}

.okicon{
	display: block;
}

.home-card{
	padding-left: 12px !important;
  padding-right: 12px !important;
  padding-bottom: 12px !important;
}

.home-card:hover {
  box-shadow: 10px 10px 15px 5px rgba(0,0,0,0.03), 0 3px 11px 0 rgba(0,0,0,0.01);
}
.module{
	border-image: linear-gradient(to right, #f3f3f3 , #afafafdb) 1 4%;
	border-width: 5px;
	border-style: solid;
	/* border: 5px; */
	border-image-slice: 1;
	border-left: 0px;
	border-right: 0;
	border-bottom: 0;
}

.module2{
	border-image: linear-gradient(to right,#afafafdb, #f3f3f3) 1 4%;
	border-width: 3px;
	border-style: solid;
	/* border: 5px; */
	border-image-slice: 1;
	border-left: 0px;
	border-right: 0;
	border-bottom: 0;
}

.home-hr{
	width: 47%;
	margin-left: auto;
	margin-right: auto;
}

.home-quote-top{
	font-size: 6em;
	display: flex;
	color: #e4e4e482;
	margin-left: 18%;
	position: relative;
	margin-bottom: -70px;
}

.home-quote-bottom{
	font-size: 6em;
	display: flex;
	color: #e4e4e482;
	margin-left: 77.5%;
	position: relative;
	margin-top: -75px;
}

.footer-hr{
	box-sizing: content-box;
	height: 0;
	margin-top: 1rem;
	border: 0;
	border-top: 1px solid rgba(255,255,255,1);
	width: 45%;
	margin-left: auto;
	margin-right: auto;
}
.footer-hr2 {
    box-sizing: content-box;
    height: 0;
    margin-top: -14px;
    margin-bottom: 0rem;
    border: 0;
    border-top: 1px solid rgba(255,255,255,1);
    width: 35%;
    margin-left: auto;
    margin-right: auto;
}

.footer_social_margin_top {
    margin-top: 5px;
}

.footer-try-button {
    line-height: 44px;
    text-transform: none;
    background-color: white !important;
    color: #13364a !important;
    font-size: 1.1em !important;
    /* line-height: 45px; */
    height: 45px;
    padding: 0 14px;
    width: 145px;
    text-align: center;
    margin-left: 0%;
    border: 1.5px solid #fff;
}
.footer-try-button:hover{
	box-shadow: 0 0 10px rgba(255,255,255,1) !important;
}
.footer_button_flex{
	display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.footer_div{
	padding: 10px 0 !important;
    background-color: #13364a;
    margin-top: 1rem !important;
}
#predicttogether{
	margin-top: 5rem !important;

}
.dark.foot #top-social li a {
	color: #fff;
}

.dark.foot #top-social li {
	border-left: 0px !important;
}

.footet-contact-button{
	text-transform: none;
	background-color: white !important;
	color: #12546d !important;
	font-size: 1.1em !important;
}
/* ... */

